<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainQuadraticLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/equation"
        android:text="@string/equation"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/title"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/entA"
        android:text="@string/enterA"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/equation"

        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ATF"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/equation"
        android:layout_toRightOf="@+id/entA"

        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/entB"
        android:text="@string/enterB"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/ATF"

        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/BTF"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@+id/entB"
        android:layout_below="@+id/ATF"

        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp"/>


    <TextView
        android:id="@+id/entC"
        android:text="@string/enterC"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/BTF"

        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/CTF"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@+id/entC"
        android:layout_below="@+id/BTF"

        android:layout_marginBottom="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/restxt"
        android:text="@string/results"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"

        android:layout_below="@+id/CTF"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/results"
        android:text="@string/empty"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"

        android:layout_toRightOf="@+id/restxt"
        android:layout_below="@+id/CTF"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/countBtn"
        android:text="@string/count"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/results"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/exit"
        android:text="@string/exit"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"

        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"

        android:textSize="20sp"/>
</RelativeLayout>