<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainLabel"
        android:text="@string/mainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"

        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

        android:textSize="30sp"/>

    <Button
        android:id="@+id/countingBtn"
        android:text="@string/countingBtn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/mainLabel"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="20dp"

        android:textSize="20sp"/>

    <Button
        android:id="@+id/quadraticEquationBtn"
        android:text="@string/quadraticEquationBtn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/countingBtn"
        android:layout_centerHorizontal="true"

        android:textSize="15sp"/>
</RelativeLayout>